2012-05-28 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-18
	* putting back in the waiting for dqm discards before attempting
	  empty event write

2012-05-27 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-17
	* putting back in 01-00-15 (was not the problem)

2012-05-24 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-16
	* revert to waiting for dqm cells to be empty
	  (seems to cause RB to stop before EP's disconnect)

2012-05-23 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-15
	* fix late dqm cell discards on queued empty dqm cell
	* waiting for "send" workloops to exit before resetting shm

2012-05-10  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-14
	* Added lock between I2O SM discards & stopping
	* Improved input validation from SM I2O messages
	
2012-05-09  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-13
	* improved exception reporting from ShmBuffer
	* some input validation through I2O
	
2012-05-03  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-12
	* fixed some LOG4CPLUS messages
	
2012-05-02  Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-11
	* merge NewRB (new ResourceBroker) into trunk

2012-04-25  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-10
	* fixed resource resetting after emergency stop
	
2012-04-21  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-08
	* moved resource resetting to stopping
	
2012-04-17  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-07-01
	* changes to setEvtDiscard and writeErrorEventData (double discard)
	
2012-04-17  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-07
	* resources and shm buffer are reset on Enabling

2012-04-12  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-06
	* added ShmBuffer exception handling
	* added protection from late SM discards through I2O
	
2012-04-09  Srecko Morovic  <aspataru@cern.ch>

	* tag V01-00-05-01
	* back to nbFreeSlotsMax = nbResources() / 2

2012-04-02  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-03