@@ -1,3 +1,12 @@
+2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-00-19
+	* two threads running crashed EP handler locked out from running
+	  it at the same time
+	* I2O (except lumi) protected by transition lock
+	* Lumi I2O will abort writing all raw cells if Stop arrives
+	* removing pid not fatal if not present
+
 2012-05-28 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-00-18
